processing/presidio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: presidio-analyzer-ingress
spec:
  rules:
  - host: 127.0.0.1
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: presidio-analyzer-service
            port:
              number: 80
